CSS: Ensure proper bottom and right spacing for .grid container
refs #215

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -118,6 +118,11 @@ form[name=form_timerangepickercustom_graphite] {
   display: inline-block;
 }
 
+.grid {
+  margin-right: -1em;
+  margin-bottom: -1em;
+}
+
 .grid-item {
   display: inline-block;
   border-radius: .25em;
